--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,23 +1,52 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
 
+:root{/* é usado para colocar as variaveis*/
+    --bg-gray: #ddd; /* variavel para backgroud*/
+    --color-primary: #9b92e7; /*variavel para cor da navegação*/
+    --white: #fff;
+}
 * {
     box-sizing: border-box;
     font-family: "Open Sans", sans-serif;
+    
 }
 html, body {
-    background-color: #edd;
+    background-color: var(--bg-gray);
 }
 header {
-    background-color: #4D41C0;
-    color: #fff;
-
+    background-color: var(--color-primary);
+    color: var(--white);
+    height: 60px;
+    display: flex;
+    align-items: center;
+}
+h1, h2, h3, h4, h5, h6{
+    margin: 0;
 }
 nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
+
 }
+nav h1{
+    font-size: 24px;
+    font-weight: 700;
+}
+nav a{
+    font-size: 12px;
+    font-weight: 400;
+}
+
 a, a:hover {
     text-decoration: none;
-    color: #fff;
+    color: inherit;
+}
+.dsmovi-contact-container{
+    display: flex;
+    align-items: center;
+
+}
+.dsmovi-contact-container img{
+    margin-right: 10px;
 }
