--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,6 +5,7 @@
     --color-primary: #9b92e7; /*variavel para cor da navegação*/
     --white: #fff;
     --textgray:#4a4a4a;
+    --text-light-gray: #aaa;
 }
 * {
     box-sizing: border-box;
@@ -98,12 +99,47 @@ a, a:hover {
     align-items: center;
     justify-content: center;
     border-radius: 4px;
-
+    border: 0 ;
     
 }
 
-/***********/
+/******Form*****/
+
 .dsmovie-form-container{
     padding: 40px 0;
     max-width: 480px;
+}
+.dsmovie-form-description{
+ background-color: var(--white);
+ padding: 20px;
+ display: flex;
+ flex-direction: column;
+align-items: center;
+border-radius: 0 0 8px 8px;
+
+}
+.dsmovie-form{
+    width: 100%;
+
+}
+.dsmovie-form-description h3{
+    font-size: 13px;
+    font-weight: 700;
+    margin-bottom: 20px;
+
+}
+.dsmovie-form-group{
+    margin-bottom: 20px;
+
+}
+.dsmovie-form-group label{
+    font-size: 12px;
+    color: var(--text-light-gray);
+}
+.dsmovie-form-btn-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100px;
+    justify-content: space-between;
 }
