--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,6 +6,7 @@
     --white: #fff;
     --textgray:#4a4a4a;
     --text-light-gray: #aaa;
+    --star-yellow: #ffbb3a;
 }
 * {
     box-sizing: border-box;
@@ -76,7 +77,7 @@ a, a:hover {
     padding: 10px 20px 20px 20px;
     background-color: var(--white);
     border-radius: 0 0 8px 8px ;
-    min-height: 150px;
+    min-height: 220px;
 
 
 }
@@ -88,6 +89,26 @@ a, a:hover {
     text-align: center;
 
 }
+.dsmovie-card-descreption-bottom{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.dsmovie-card-descreption-bottom img{
+    width: 24px;
+}
+.dsmovie-card-descreption-bottom h4{
+    font-size: 16px;
+    font-weight: 700;
+    color: var(--star-yellow);
+}
+.dsmovie-card-descreption-bottom p {
+    font-size: 12px;
+    font-weight: 400;
+    color: var(--text-light-gray);
+    margin-bottom: 10px;
+}
+
 .dsmovie-btn, .dsmovie-btn:hover{
     width: 50%;
     height: 40px;
@@ -118,16 +139,17 @@ align-items: center;
 border-radius: 0 0 8px 8px;
 
 }
-.dsmovie-form{
-    width: 100%;
-
-}
 .dsmovie-form-description h3{
     font-size: 13px;
     font-weight: 700;
     margin-bottom: 20px;
 
 }
+.dsmovie-form{
+    width: 100%;
+
+}
+
 .dsmovie-form-group{
     margin-bottom: 20px;
 
