--- a/CSS/style.css
+++ b/CSS/style.css
@@ -56,7 +56,8 @@ a, a:hover {
 }
 
 #dsmovie-card-list{
-    padding: 40px 0;
+    padding: 40px 10px;
+
 }
 
 .dsmovie-card{
@@ -77,12 +78,12 @@ a, a:hover {
     padding: 10px 20px 20px 20px;
     background-color: var(--white);
     border-radius: 0 0 8px 8px ;
-    min-height: 220px;
+    min-height: 190px;
 
 
 }
 .dsmovie-card-description h3{
-    margin-bottom: 25px;
+    margin-bottom: 10px;
     font-family: Open sans-serif;
     font-size: 14px;
     font-weight: 700;
@@ -110,7 +111,7 @@ a, a:hover {
 }
 
 .dsmovie-btn, .dsmovie-btn:hover{
-    width: 50%;
+    width: 100%;
     height: 40px;
     background-color: var(--color-primary);
     color: var(--white);
